--- a/components/NFTCard/index.module.scss
+++ b/components/NFTCard/index.module.scss
@@ -34,6 +34,9 @@
 
   img {
     object-fit: contain;
+    width: 100%;
+    height: 100%;
+    position: absolute;
   }
   .imageCover {
     position: absolute;
