--- a/components/RentNFT/rentModal.module.scss
+++ b/components/RentNFT/rentModal.module.scss
@@ -77,6 +77,7 @@
     }
 
     .payBox {
+      margin-bottom: 4rem;
       & > div {
         display: flex;
         justify-content: space-between;
